--- a/P1/2c-template.css
+++ b/P1/2c-template.css
@@ -147,7 +147,7 @@ h2{
   margin: 10px;
   box-shadow: black 5px 5px 10px;
   font-weight: 500;
-
+}
 
 #TituloPersonajes{
   margin:10px;
@@ -162,18 +162,76 @@ h2{
   box-shadow: rgb(110, 106, 134) 5px 5px 40px;
   text-shadow: 4px 4px 5px rgba(245, 245, 245, 0.6);
 }
+.dt{
+  color:beige;
+  background-color: rgba(0, 0, 0, 0.596);
+  border: black solid;
+  border-radius: 5px;
+  padding: 10px;
+  font-weight:bold;
+  text-shadow: 4px 4px 5px rgb(8, 8, 8) ;
+  font-family: 'BankGothicBold';
+  }
+  
+  #i{
+    color:rgb(238, 238, 230);
+    background-color: rgba(0, 0, 0, 0.596);
+    border: black solid;
+    border-radius: 5px;
+    padding: 10px;
+  }
+  
+  .dd{
+  margin: 10px;
+  color: rgb(0, 0, 0);
+  background-color: rgba(223, 212, 212, 0.466);
+  font-size: medium;
+  border: solid;
+  border-radius: 5px;
+  padding: 20px;
+  }
+  
+  .url {
+    font-family: 'BankGothicBold';
+    color: rgb(88, 86, 182);
+    font-size:large; 
+    padding: 10px;
+    background-color: rgba(236, 225, 225, 0.699);
+    margin: 15px;
+    font-weight: 100;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.466) 5px 5px 40px;
+    border: black;
+    float:left;
+  }
 /* estilos para imágenes https://www.w3schools.com/css/css3_images.asp */
 /* posicionamiento de imágenes https://www.w3schools.com/css/css_positioning.asp */
 
+#imghtml {
+  height: 230px;
+  width: 100%;
+  border-radius: 50%;
+  margin: 14px;
+  border: 4px solid;
+  border-color:rgb(20, 19, 19);
+  box-shadow: 5px 5px 
+}
+
 img {
     width: 100%;
+    border-radius: 10%;
+    margin:14px;
+    border:solid;
+    border-color: black;
     height: auto;
+    box-shadow: rgb(150, 149, 231)
 }
 
 .iresponsive {
     padding: 0 6px;
     float: left;
     width: 50%;
+    text-aling:center;
   }
 
 /* Responsive layout - cuando el ancho de pantalla es menor a 600px, muestra las columnas apiladas. */
