--- a/P1/2c-template.css
+++ b/P1/2c-template.css
@@ -108,7 +108,7 @@ h1{
   border: solid;
   border-radius: 5px;
   text-align: center;
-  /*background-color: rgba(17, 15, 15, 0.842);*/
+  background-color: rgba(17, 15, 15, 0.842);
   padding: 10px;
   box-shadow: rgb(148, 169, 194) 5px 5px 40px;
   text-shadow: 4px 4px 5px rgba(109, 10, 10, 0.493);
@@ -207,12 +207,10 @@ h2{
 /* posicionamiento de imágenes https://www.w3schools.com/css/css_positioning.asp */
 
 #imghtml {
-  height: 230px;
+  height: 360px;
   width: 100%;
   border-radius: 50%;
   margin: 14px;
-  border: 4px solid;
-  border-color:rgb(20, 19, 19);
   box-shadow: 5px 5px 
 }
 
