--- a/P1/2c-template.css
+++ b/P1/2c-template.css
@@ -214,7 +214,9 @@ h2{
 img {
     width: 100%;
     border-radius: 10%;
-    height: 145px;
+    height: auto;
+    border: solid;
+    border-color: black;
 }
 
 .iresponsive {
