--- a/P1/2c-template.css
+++ b/P1/2c-template.css
@@ -217,6 +217,8 @@ img {
     height: auto;
     border: solid;
     border-color: black;
+    display: block;
+    margin: 0 auto;
 }
 
 .iresponsive {
