--- a/P1/2c-template.css
+++ b/P1/2c-template.css
@@ -70,7 +70,7 @@ clear: both;
 
 /*Cuerpo index.html*/
 body{
-  background-image: url('añejo.webp');
+  background-image: url('Fondonuevo');
   background-size: cover;
   background-repeat: no-repeat;
 }
