--- a/P1/about.css
+++ b/P1/about.css
@@ -3,9 +3,8 @@
   }
   
 img{
-    max-height: 100%;
-    height: 200px;
-    width: 200px;
+    height: 145px;
+    width: 100%;
 }
 
 
@@ -107,7 +106,7 @@ td {
   }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
 
     .iresponsive {
         width: 100%;
