--- a/P1/about.css
+++ b/P1/about.css
@@ -1,7 +1,10 @@
 * {
     box-sizing: border-box;
   }
-  
+  #imghtml {
+    height: 145px;
+    width: 100%;
+  }  
 img{
     max-height: 100%;
     height: 200px;
