--- a/P1/about.css
+++ b/P1/about.css
@@ -6,11 +6,14 @@
     width: 100%;
   }  
 img{
-    max-height: 100%;
-    height: 200px;
-    width: 200px;
+    width: 100%;
+    border-radius: 10%;
+    height: auto;
+    border: solid;
+    border-color: black;
+    display: block;
+    margin: 0 auto;
 }
-
 
 body  {
   background-image: url('PruebaFondo.jpg');
