--- a/P1/about.css
+++ b/P1/about.css
@@ -2,8 +2,9 @@
     box-sizing: border-box;
   }
   #imghtml {
-    height: 145px;
-    width: 100%;
+    max-height: 100%;
+    height: 200px;
+    width: 200px;
   }  
 img{
     width: 100%;
@@ -16,7 +17,7 @@ img{
 }
 
 body  {
-  background-image: url('PruebaFondo.jpg');
+  background-image: url('mullins.jpg');
   background-size: cover; 
   text-align: center;
 }
@@ -113,7 +114,7 @@ td {
   }
 
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 600px) {
 
     .iresponsive {
         width: 100%;
