--- a/P1/about.css
+++ b/P1/about.css
@@ -17,7 +17,7 @@ img{
 }
 
 body  {
-  background-image: url('mullins.jpg');
+  background-image: url('añejo.webp');
   background-size: cover; 
   text-align: center;
 }
