--- a/P1/about.css
+++ b/P1/about.css
@@ -21,6 +21,9 @@ body  {
   background-size: cover; 
   background-repeat: no-repeat;
   text-align: center;
+  width: 100%;
+  margin: 0 auto;
+  overflow-x: hidden;
 }
 
 #volverpagina{
