--- a/P1/about.css
+++ b/P1/about.css
@@ -3,8 +3,12 @@
   }
   #imghtml {
     max-height: 100%;
-    height: 200px;
+    height: auto;
     width: 200px;
+    border: solid 2px black;
+    border-radius: 10%;
+    display: block;
+    margin: 0 auto;
   }  
 img{
     width: 100%;
@@ -18,10 +22,14 @@ img{
 
 body  {
   background-image: url('FondoCSS.jpg');
-  background-size: cover; 
+  background-size: contain; 
+  background-position: top center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   text-align: center;
   overflow-x: hidden;
+  margin: 0;
+  padding: 20px;
 }
 
 #volverpagina{
@@ -84,6 +92,9 @@ td {
       -1px -1px 0 #964242,
       1px -1px 0 #964242;
     font-size: 150%;
+    word-wrap:break-word;
+    text-align: justify;
+    line-heigth: 1.5;
   }
 
 .titulos {
@@ -111,16 +122,20 @@ td {
     float: left;
    
     text-align: center;
-    width: 1600px;
-    height: 1600px;
+    width: 300px;
+    height: auto;
+    margin: 10px;
   }
 
 
-@media screen and (max-width: 00px) {
+@media screen and (max-width: 768px) {
     
   body{
       background-size: cover;
       background-position: center;
+  }
+  td{
+    font-size: 100%;
   }
   
   .columna {
