--- a/P1/about.css
+++ b/P1/about.css
@@ -4,14 +4,13 @@
   #imghtml {
     max-height: 100%;
     height: auto;
-    width: 200px;
-    border: solid 2px black;
+    width: auto;
     border-radius: 10%;
     display: block;
     margin: 0 auto;
   }  
 img{
-    width: 100%;
+    width: auto;
     border-radius: 10%;
     height: auto;
     border: solid;
@@ -133,9 +132,6 @@ td {
   body{
       background-size: cover;
       background-position: center;
-  }
-  td{
-    font-size: 100%;
   }
   
   .columna {
