--- a/P1/about.css
+++ b/P1/about.css
@@ -2,12 +2,13 @@
     box-sizing: border-box;
   }
   #imghtml {
-    max-height: 100%;
-    height: auto;
-    width: auto;
-    border-radius: 10%;
-    display: block;
-    margin: 0 auto;
+    height: 230px;
+    width: 100%;
+    border-radius: 50%;
+    margin: 14px;
+    border: 4px solid;
+    border-color: black;
+    box-shadow: gray;
   }  
 img{
     width: 200px;
