--- a/P1/about.css
+++ b/P1/about.css
@@ -25,9 +25,8 @@ body{
 #volverpagina{
     padding: 10px;
     margin: 10px;
-    border-radius: 20px;
-    border: solid;
-    border-color: rgb(0, 0, 0);
+    border-radius: 5px;
+    border: black;
     -webkit-text-stroke: px rgb(0, 0, 0);
     color: #575269;
     text-shadow:
@@ -37,8 +36,12 @@ body{
       1px -1px 0 #000;
   
     box-shadow: 0 0 20px rgb(152, 148, 196);
-  text-align: left;
-  font-size: 150%;
+  text-align: center;
+  font-size: medium;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  
 }
 
 th {
