--- a/P2/boom.css
+++ b/P2/boom.css
@@ -3,7 +3,7 @@
 }
 
 body{
-    background-image: url('fondo.jpg');
+    background-image: url('jinx.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
 
@@ -11,8 +11,8 @@ body{
 
 h1{
     text-align: center;
-    color: rgba(211, 147, 94, 0.842);
-    text-shadow: 3px 3px 1px rgb(236, 168, 136), 5px 5px 2px rgb(163, 136, 95);
+    color: rgba(31, 49, 82, 0.842);
+    text-shadow: 3px 3px 1px rgba(31, 49, 82, 0.842), 5px 5px 2px rgb(163, 136, 95);
     font-size:60px;
 
 }
