--- a/P2/boom.css
+++ b/P2/boom.css
@@ -19,6 +19,12 @@ h1{
 
 p{
     text-shadow: 2px 2px 4px black;
+    font-size: 30px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 80%;
 }
 
 button {
