--- a/P2/boom.css
+++ b/P2/boom.css
@@ -17,15 +17,11 @@ h1{
 
 }
 
-p{
+h3{
     text-shadow: 2px 2px 4px black;
     font-size: 30px;
     text-align: center;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 80%;
-    transform: translate(-50%, -50%)
 }
 
 button {
