--- a/P2/boom.css
+++ b/P2/boom.css
@@ -17,11 +17,8 @@ h1{
 
 }
 
-h3{
+p{
     text-shadow: 2px 2px 4px black;
-    font-size: 30px;
-    text-align: center;
-    position: absolute;
 }
 
 button {
@@ -83,5 +80,4 @@ button {
     color: rgb(235, 226, 198);
     font-weight: 800;
     box-shadow: 5px 10px 10px rgb(46, 55, 143);
-  
 }
