--- a/P2/boom.css
+++ b/P2/boom.css
@@ -27,7 +27,8 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #info{
