--- a/P3/alien.css
+++ b/P3/alien.css
@@ -20,7 +20,8 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.9);
+    background-color: url('fondoInicio.gif') no-repeat center center;
+    background-size: cover;
     z-index: 10;
 }
 
