--- a/P3/alien.css
+++ b/P3/alien.css
@@ -24,6 +24,10 @@ body {
     background-size: cover;
     z-index: 10;
 }
+p  {
+    color: white;
+    text-shadow: 3px 3px 6px rgba(0,0,0,0.8)
+}
 
 #startButton {
     background-color: #00aa00;
