--- a/P3/alien.css
+++ b/P3/alien.css
@@ -26,7 +26,7 @@ body {
 }
 p  {
     color: white;
-    text-shadow: 3px 3px 6px rgba(0,0,0,0.8)
+    text-shadow: 3px 3px 6px rgba(117, 11, 11, 0.8)
 }
 
 #startButton {
