--- a/P3/alien.css
+++ b/P3/alien.css
@@ -13,6 +13,7 @@ body {
 
 #startScreen {
     text-align: center;
+    text-shadow: 3px 3px 6px rgba(117, 11, 11, 0.8);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,10 +25,7 @@ body {
     background-size: cover;
     z-index: 10;
 }
-p  {
-    color: white;
-    text-shadow: 3px 3px 6px rgba(117, 11, 11, 0.8)
-}
+
 
 #startButton {
     background-color: #00aa00;
