--- a/P3/alien.css
+++ b/P3/alien.css
@@ -25,8 +25,8 @@ body {
   
   #gameContainer {
     position: relative;
-    width: 800px;
-    height: 800px;
+    width: 600px;
+    height: 600px;
     margin: 0 auto;
     background-color: #111;
     border: 2px solid white;
@@ -36,39 +36,39 @@ body {
   #hud {
     display: flex;
     justify-content: space-between;
-    width: 800px;
+    width: 600px;
     margin: 10px auto;
     font-size: 18px;
   }
   
   .player {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     background: url('naveBuena.png') no-repeat center center;
     background-size: contain;
     position: absolute;
-    bottom: 40px;
-    left: 180px;
+    bottom: 0;
+    left: 280px;
   }
   
   .enemy {
-    width: 50px;
-    height: 50px;
-    background: url('images.jpeg') no-repeat center center;
+    width: 40px;
+    height: 40px;
+    background: url('images.jpeg');
     background-size: contain;
     position: absolute;
   }
   
   .bullet {
-    width: 5px;
-    height: 10px;
+    width: 10px;
+    height: 15px;
     background-color: yellow;
     position: absolute;
   }
   
   .enemyBullet {
-    width: 5px;
-    height: 10px;
+    width: 10px;
+    height: 15px;
     background-color: orange;
     position: absolute;
   }
