--- a/P3/alien.css
+++ b/P3/alien.css
@@ -27,7 +27,8 @@ body {
     position: relative;
     width: 550px;
     height: 550px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: 50px;
     background-color: #111;
     border: 2px solid white;
     overflow: hidden;
