--- a/P3/alien.css
+++ b/P3/alien.css
@@ -27,8 +27,7 @@ body {
     position: relative;
     width: 550px;
     height: 550px;
-    margin-left: auto;
-    margin-right: 50px;
+    margin: 0 auto;
     background-color: #111;
     border: 2px solid white;
     overflow: hidden;
