--- a/P3/alien.css
+++ b/P3/alien.css
@@ -3,7 +3,7 @@ body {
     background-color: black;
     color: white;
     font-family: Arial, sans-serif;
-    overflow: hidden;
+    overflow: auto;
   }
   
   #startScreen {
