--- a/P3/alien.css
+++ b/P3/alien.css
@@ -150,15 +150,17 @@ body {
   left: 50%;
   transform: translateX(-50%);
   display: flex;
-  gap: 10px;
+  gap: 15px;
 }
 
 #mobileControls button {
-  font-size: 24px;
-  padding: 10px 20px;
+  font-size: 32px;
+  padding: 20px 30px;
   background: #444;
   color: white;
   border: none;
-  border-radius: 10px;
-  cursor: pointer;
+  border-radius: 15px;
+  cursor: pointer; width: 80px; 
+  height: 80px;
+
 }
