--- a/P4/memory.css
+++ b/P4/memory.css
@@ -1,184 +1,124 @@
 body {
-    background-color: #4486d1;
+  background-image: url('imagenfondo.jpeg');
+  background-size: cover;
+  background-position: center;
+  font-family: Arial, sans-serif;
+  color: #fff;
+  text-align: center;
+}
+
+.inicio {
+  padding: 50px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  margin: 100px auto;
+  width: 80%;
+}
+
+h1 {
+  font-size: 50px;
+  margin-bottom: 20px;
+}
+
+p {
+  font-size: 24px;
+  margin-bottom: 40px;
+}
+
+.elecciones {
+  margin-bottom: 20px;
+}
+
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 15px 32px;
+  margin: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+button:hover {
+  background-color: #45a049;
+}
+
+.game {
+  display: none; /* Ocultar el juego hasta que se inicie */
+}
+
+.display {
+  margin-top: 20px;
+}
+
+.grid-container {
+  position: relative;
+}
+
+.tablero {
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 20px;
+}
+
+.card {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  cursor: pointer;
+}
+
+.card-front,
+.card-back {
+  position: absolute;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  background: #29283a;
+  transition: transform .6s cubic-bezier(0.4, 0.0, 0.2, 1);
+  backface-visibility: hidden;
+}
+
+.card-back img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card-back {
+  font-size: 28pt;
+  text-align: center;
+  line-height: 100px;
+  background: #e6ecfd;
+  transform: rotateY(180deg) rotateZ(50deg);
+  user-select: none;
+}
+
+.card.flipped .card-front {
+  transform: rotateY(180deg) rotateZ(50deg);
+}
+
+.card.flipped .card-back {
+  transform: rotateY(0) rotateZ(0);
+}
+
+@media screen and (max-width: 600px) {
+  .inicio {
+    width: 90%;
   }
+
   h1 {
-    font-size: 70px;
-    margin: 10px;
-    color: #5fb3eb;
-    margin-left: 550px;
-  }
-  .elecciones {
-    color: #4763b1;
-    margin-left: 700px;
     font-size: 40px;
-    margin-top: 30px;
   }
-  .game {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #215681;
-    border-radius: 25px;
-    margin-top: 200px;
+
+  p {
+    font-size: 20px;
   }
+
   button {
-    cursor: pointer;
-  }
-  .disabled {
-    color: #757575;
-  }
-  .card {
-    position: relative;
-    width: 100px;
-    height: 100px;
-    cursor: pointer;
-  }
-  .card-front,
-  .card-back {
-    position: absolute;
-    border-radius: 5px;
-    width: 100%;
-    height: 100%;
-    background: #29283a;
-    transition: transform .6s cubic-bezier(0.4, 0.0, 0.2, 1);
-    backface-visibility: hidden;
-  }
-  .card-back {
-    font-size: 28pt;
-    text-align: center;
-    line-height: 100px;
-    background: #e6ecfd;
-    transform: rotateY(180deg) rotateZ(50deg);
-    user-select: none;
-  }
-  .card.flipped .card-front {
-    transform: rotateY(180deg) rotateZ(50deg);
-  }
-  .card.flipped .card-back {
-    transform: rotateY(0) rotateZ(0);
-  }
-  html {
-    width: 100%;
-    height: 100%;
-  }
-  .controls {
-    display: flex;
-    gap: 20px;
-    margin-bottom: 20px;
-  }
-  button {
-    background: #1852f1;
-    color: #081f6b;
-    border-radius: 5px;
     padding: 10px 20px;
-    border: 0;
-    cursor: pointer;
-    font-family: Montserrat;
-    font-size: 18pt;
+    font-size: 16px;
   }
-  .disabled {
-    color: #080a6b;
-  }
-  .display {
-    color: #3918f1;
-    font-size: 14pt;
-    margin-left: 10px;
-    margin-top: 10px;
-  }
-  .grid-container {
-    position: relative;
-  }
-  .tablero,
-  .win {
-    border-radius: 5px;
-    box-shadow: 0 25px 50px rgb(33 33 33 / 25%);
-    transition: transform .6s cubic-bezier(0.4, 0.0, 0.2, 1);
-    backface-visibility: hidden;
-  }
-  .tablero {
-    padding: 20px;
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-gap: 20px;
-  }
-  .grid-container.flipped .tablero {
-    transform: rotateY(180deg) rotateZ(50deg);
-  }
-  .grid-container.flipped .win {
-    transform: rotateY(0) rotateZ(0);
-  }
-  .card {
-    position: relative;
-    width: 100px;
-    height: 100px;
-    cursor: pointer;
-  }
-  .card-front,
-  .card-back {
-    position: absolute;
-    border-radius: 5px;
-    width: 100%;
-    height: 100%;
-    background: #213fe7;
-    transition: transform .6s cubic-bezier(0.4, 0.0, 0.2, 1);
-    backface-visibility: hidden;
-  }
-  .card-back {
-    font-size: 28pt;
-    text-align: center;
-    line-height: 100px;
-    background: #6072da;
-    transform: rotateY(180deg) rotateZ(50deg);
-    user-select: none;
-  }
-  .card.flipped .card-front {
-    transform: rotateY(180deg) rotateZ(50deg);
-  }
-  .card.flipped .card-back {
-    transform: rotateY(0) rotateZ(0);
-  }
-  .win {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    background: #FDF8E6;
-    transform: rotateY(180deg) rotateZ(50deg);
-  }
-  .win-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 21pt;
-    color: #282A3A;
-  }
-  .highlight {
-    color: #6f00fc;
-  }
-  @media screen and (max-width: 600px) {
-    .game {
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 100%;
-      height: auto;
-    }
-    h1 {
-      font-size: 65px;
-      margin: 0;
-    }
-    .elecciones {
-      margin: 0;
-    }
-    .game {
-      margin-top: 300px;
-    }
-    .card {
-      width: 90%;
-    }
-  }
-  
+}
