--- a/P4/memory.css
+++ b/P4/memory.css
@@ -45,7 +45,10 @@ button:hover {
 }
 
 .game {
-  display: none; /* Ocultar el juego hasta que se inicie */
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  padding:20px;
 }
 
 .display {
@@ -61,6 +64,8 @@ button:hover {
   display: grid;
   grid-template-columns: repeat(4, auto);
   grid-gap: 20px;
+  margin: 0 auto;
+  justify-content: center;
 }
 
 .card {
