--- a/P4/memory.css
+++ b/P4/memory.css
@@ -1,6 +1,8 @@
 body {
   background-image: url('imagenfondo.jpeg');
   background-size: cover;
+  background-repeat: no-repeat; 
+  background-attachment: fixed;
   background-position: center;
   font-family: Arial, sans-serif;
   color: #fff;
@@ -125,6 +127,13 @@ button:hover {
   button {
     padding: 10px 20px;
     font-size: 16px;
+  }
+  
+  body {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll; /* en móviles mejor scroll que fixed */
   }
 }
 
