--- a/P4/memory.css
+++ b/P4/memory.css
@@ -9,6 +9,12 @@ body {
   text-align: center;
 }
 
+.boton-seleccionado {
+  background-color: #ffc107 !important;
+  color: #000 !important;
+  border: 2px solid #fff;
+}
+
 .inicio {
   padding: 50px;
   background-color: rgba(0, 0, 0, 0.5);
