--- a/P4/memory.css
+++ b/P4/memory.css
@@ -117,6 +117,11 @@ button:hover {
   transform: rotateY(0) rotateZ(0);
 }
 
+.controles {
+  margin-top: 20px;
+  text-align: center;
+}
+
 @media screen and (max-width: 600px) {
   .inicio {
     width: 90%;
