--- a/P5/red.css
+++ b/P5/red.css
@@ -25,3 +25,7 @@ button {
     margin: 5px;
     background-image: linear-gradient(to right, #000000, #787d83); 
 }
+span {
+    display: inline-flex;
+    gap: inherit;
+}
