--- a/P5/red.css
+++ b/P5/red.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Jersey10-Regular;
-    scr: url(./Jersey10-Regular.ttf);
+    src: url(./Jersey10-Regular.ttf);
 }
 
 canvas {
